k8s-onprem/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
  labels:
    app: juice-shop
  annotations:
    # MetalLB assigns an IP from the 'default' pool defined in prerequisites/metallb-config.yaml
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  selector:
    app: juice-shop
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
